Fix answer text clipping issue

--- a/css/flowCalculator.css
+++ b/css/flowCalculator.css
@@ -29,7 +29,7 @@ img{
   	max-width: 20ex;
 }
 .logo{
-	padding-top: 2.25ex;
+	padding-top: 1.75ex;
   	max-height: 39.6ex;
   	max-width: 15ex;
 }
